--- a/trapp/index.html
+++ b/trapp/index.html
@@ -71,8 +71,8 @@
 <body>
   <h1>運動AI助手</h1>
   <div class="btn-container">
-    <a href="plan.html" class="button">規劃你的週期化訓練內容</a>
-    <a href="analyze.html" class="button">輸入體測數據以分析</a>
+    <a href="baseball.html" class="button">棒球運動專項訓練</a>
+    <a href="bamton.html" class="button">羽毛球運動專項訓練</a>
   </div>
 </body>
 </html>
